fixed image not showing on drink search

--- a/assets/index.css
+++ b/assets/index.css
@@ -57,3 +57,8 @@ button {
   max-width: 300px;
   max-height: 300px;
 }
+
+.drinkPic {
+  max-width: 300px;
+  max-height: 300px;
+}
